create github pages

--- a/page10.html
+++ b/page10.html
@@ -80,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/r">bootstrap templates</a></section><section class="section-table cid-qWyu7EKNND" id="table1-1r">
+<section class="engine"><a href="https://mobirise.me/g">build a site for free</a></section><section class="section-table cid-qWyu7EKNND" id="table1-1r">
 
   
   
@@ -233,7 +233,7 @@
                         Thanks for filling out the form!
                     </div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="ayIi8umCo1y4oV3uBQoLTDSeMliVVNYjX5yK1ttSfSRGtpc8/sD51AbCBUnd21I08Iv+EDs4o8/DXOU3/ZCk0AOe+aNbd1iFVK/TI9p7ZjBR/yTh5pkykmm1yzkSW0AF" data-form-field="Email">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="MFINHYzasRDY6/sVZF5sQ7jNf8/tZsf2Uen/saIcdyb0yXFaNMINjCTS137Gzsp9oKBhd0NPbrD4foyEo9wQ3AJauAR4bBflii3RwRge5kcmGliE9enKw3JfIsfpGmmd" data-form-field="Email">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
@@ -306,7 +306,7 @@
                     </div>
 
                     <form class="form-inline" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form">
-                        <input type="hidden" value="NmVjO2r8cJvQF+xYYAb5uhnQif0hcsgurXOYMj0K0b2IuUg7iAPS24XFLkO+pragb/gFdbtNmTVmQiq7Zh8rBnutI1BQX1wPZOLYt/sEGrz/oOL8qaaTQUrGROGna/1y" data-form-email="true">
+                        <input type="hidden" value="ldZsZrR10J81uEKMvShDMEL2iM8eVOmPUW5v+ML+SuH8L+Mi1Vq7M+P2YWok6gyrVZic1v5mL4Pj7L6kOUx62hcclOD5z093xgsLmPZmyDGZXoUmtL4EpTHIBbHz6msL" data-form-email="true">
                         <div class="form-group">
                             <input type="email" class="form-control input-sm input-inverse my-2" name="email" required="" data-form-field="Email" placeholder="Email" id="email-footer3-2a">
                         </div>
