--- a/page2.html
+++ b/page2.html
@@ -80,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/m">web design templates</a></section><section class="mbr-section content4 cid-qWsMAPvWsa" id="content4-o">
+<section class="engine"><a href="https://mobirise.me/o">one page website templates</a></section><section class="mbr-section content4 cid-qWsMAPvWsa" id="content4-o">
 
     
 
@@ -146,7 +146,7 @@
                     </div>
 
                     <form class="form-inline" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form">
-                        <input type="hidden" value="eqK2shoApy9boNrzhWSC/FAxnlvsB86fPCVhvH3tB9ABYpddCSzRVnAJDULZ2uRRyLgpM8BxpK1SpaMKC89PxezQcQAAakprk1LLerI55rhkvqpKFamySjhu47e08dWS" data-form-email="true">
+                        <input type="hidden" value="p3FFMnW4X3ak/DvZ/NfiyzNRcc5mvkpVaFB/t5gddGWicV4OgR4x/Vha0bKYKgSwyAPYraTColzlNY/C9xke0M6H3z+scO4qOSHzBTa3Or9NA0Ry1yz7BsEX4q6ANdxC" data-form-email="true">
                         <div class="form-group">
                             <input type="email" class="form-control input-sm input-inverse my-2" name="email" required="" data-form-field="Email" placeholder="Email" id="email-footer3-24">
                         </div>
