--- a/page4.html
+++ b/page4.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/i">free web creation software</a></section><section class="mbr-section content5 cid-qWy4treA4Z" id="content5-17">
+<section class="engine"><a href="https://mobirise.me/r">bootstrap templates</a></section><section class="mbr-section content5 cid-qWy4treA4Z" id="content5-17">
 
     
 
@@ -152,7 +152,7 @@
                             ROBOTICS</h4>
                         
                     </div>
-                    <div class="mbr-section-btn text-center"><a href="page6.html" class="btn btn-primary display-4">
+                    <div class="mbr-section-btn text-center"><a href="page9.html" class="btn btn-primary display-4">
                             View</a></div>
                 </div>
             </div>
@@ -172,7 +172,7 @@
             <div class="card p-3 col-12 col-md-6">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/018.jpg" alt="Mobirise">
+                        <img src="assets/images/010.jpg" alt="Mobirise">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7">
@@ -186,7 +186,7 @@
             <div class="card p-3 col-12 col-md-6">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/029.jpg" alt="Mobirise">
+                        <img src="assets/images/021.jpg" alt="Mobirise">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7">
@@ -243,7 +243,7 @@
                     </div>
 
                     <form class="form-inline" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form">
-                        <input type="hidden" value="5nbIz4/bCdOpCwxVAYpawjLHkEVyzE8xm0zYz5sCc4xNdQVjfXl+DZUjOoRYacxeqQbPkiycCs7S4p9dmPINIpscaJ3OjrhA3LNza8pZUMqMkH+mNOX4798l56xg8IPV" data-form-email="true">
+                        <input type="hidden" value="SncLEQ/hA6kA6538kbHk/NoIk9UnjWGEqgdLK29WzPe5R0wFVeze1zyZBodCymosfKj0YCPGiHSpOScW2zDXVcfiq56SNczrCentTzJseqMhHQFY0tDVGlu1E7NHAEB2" data-form-email="true">
                         <div class="form-group">
                             <input type="email" class="form-control input-sm input-inverse my-2" name="email" required="" data-form-field="Email" placeholder="Email" id="email-footer3-23">
                         </div>
