--- a/page8.html
+++ b/page8.html
@@ -80,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/t">amp templates</a></section><section class="section-table cid-qWypyYQYFT" id="table1-1g">
+<section class="engine"><a href="https://mobirise.me/q">free responsive website templates</a></section><section class="section-table cid-qWypyYQYFT" id="table1-1g">
 
   
   
@@ -251,7 +251,7 @@
                         Thanks for filling out the form!
                     </div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="mjW00B7c+2SZ3pfUvTo0mJQxq3ZZ9uvioA6+tDUYQiQTF+zsrellCY5yKht/ijwXL1Cu3TTfiqJNjMNjhq/pZy9ya09EEeT6ara84E0L0nCAAgW40hKzRpY3pFKsAwZu" data-form-field="Email">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="k53YP9PqMvsOT1yESKazGGJI5sMnm/MlqU3FEi4MHE4R/q5Udo4tkq2Jufzx4nFQ52vEoyzMCAxIUfRQ4cZp1HHhZfIr0LThGnerhmNpGB2oV6ejL+IuGSaSQIo1d//f" data-form-field="Email">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
@@ -324,7 +324,7 @@
                     </div>
 
                     <form class="form-inline" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form">
-                        <input type="hidden" value="FgUqoiwjdlIssZiZ48Hlq28A3tdkD/OnuQTOpeXndUTs4rHZKJEONDbKXJQ0KQ+3e5UdGwEyho8RSoPWEq0KqEJNRysyY38pijqNyoMY2Hpk3jbha/R5Q3Y2t80KY4+a" data-form-email="true">
+                        <input type="hidden" value="EexfZOSuhwu3mh/3itK7YbIFBlOid+Pa+QT38MSB3pCRusN8nAmF+tJk3+P2yB7Q725W7Fesxv0bnirGBHwaoUmxgGxicim61qVK5jFa7e5C7GiHbHzYYc0EgZQ58/oF" data-form-email="true">
                         <div class="form-group">
                             <input type="email" class="form-control input-sm input-inverse my-2" name="email" required="" data-form-field="Email" placeholder="Email" id="email-footer3-28">
                         </div>
