create github pages

--- a/page10.html
+++ b/page10.html
@@ -80,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/r">free bootstrap template</a></section><section class="section-table cid-qWyu7EKNND" id="table1-1r">
+<section class="engine"><a href="https://mobirise.me/m">site design templates</a></section><section class="section-table cid-qWyu7EKNND" id="table1-1r">
 
   
   
@@ -233,7 +233,7 @@
                         Thanks for filling out the form!
                     </div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="UpmI/VSB5g7l0yJ5fgpRRcqT0kZkxVRaX4N9x586aYD/5sw4zXwgHdWLRLXE3VYsHueyU55QhRzz5XISOROMgCZ+FvcjFY0IPWi6+Ld3K28COuya/3uScenTLAS+1W+k" data-form-field="Email">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="mVnebq+uSJ/Mc4VSXaftEWiuJJz94SFHm7/WZebawnrshLEz3UO32Dekr25qYsqKbfWM1IRND8O8VtzqriuKWSzjRXEBtXvZI70b4hxO72J+FSgB9lpl4SzKkq+R0a9j" data-form-field="Email">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
@@ -306,7 +306,7 @@
                     </div>
 
                     <form class="form-inline" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form">
-                        <input type="hidden" value="bgMpgDivIZvd+bbzi5uZBauAUdvkTPUWJ+wbP0IThl/bVL7LORbnSTD7tHaTCI14VkeQl1HEBITtpLLCHsq5Dwxpv2FegpEeToJ7J4pztSAS96r5O5BGdMOc5UKD0AWU" data-form-email="true">
+                        <input type="hidden" value="o1vaL1QLVuzt3B0kZBSZ6uTl12IBzYAbnx+7X1AIf8lqMi0/B9lDqJ2jIQqU+EUbXzh5IgtqnVXpEJBslIu5cEiPsMZ6Hb3xx9fPXRJQ6+Xxd8nrCJefzHx/yCicM3L4" data-form-email="true">
                         <div class="form-group">
                             <input type="email" class="form-control input-sm input-inverse my-2" name="email" required="" data-form-field="Email" placeholder="Email" id="email-footer3-2a">
                         </div>
