create github pages

--- a/page7.html
+++ b/page7.html
@@ -80,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/z">best html templates</a></section><section class="section-table cid-qWykKOWa0P" id="table1-1c">
+<section class="engine"><a href="https://mobirise.me/w">free html5 templates</a></section><section class="section-table cid-qWykKOWa0P" id="table1-1c">
 
   
   
@@ -239,7 +239,7 @@
                         Thanks for filling out the form!
                     </div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="H+GrRqmsmWiW3J3k7cXVVi9NsXrezRHbNvmK4B+NYQJUgAa5TKWPFYXl+cEPrPxUGtwL1lYhpSKQkxaBS5Eb/+X57YASDam44G336hdN/6fLM5isyJSmjZRXJodnMVcI" data-form-field="Email">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="wcXijAfqjjonyTNcWmZIkU0tV4xo+2SZCcE0n1hJHkaZYVPHR0GPg8n3soRPy6jlGWg2E7zuEbQKcRk8vOLlBSigzVNjs2fUSma62dXanWOvS1X1wJ0V9bj/B4TQIFkX" data-form-field="Email">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
@@ -312,7 +312,7 @@
                     </div>
 
                     <form class="form-inline" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form">
-                        <input type="hidden" value="qv4gTfa6j2mXrYB3GBKwyyf1AsL68Tt01nyumgn1CyXZ2q27PJ1820aIJpxMcoVso/KIrXozTBw5wbWnQ4TEWJKdj9PrcRLJ6TjDNQp2DndhL52CwjdAqmAwWKWlJSW+" data-form-email="true">
+                        <input type="hidden" value="5cTtdPtRBpDVrg4HZ0YiPWcwv6ivg5+6WIJqqnIg0fIlQUQXwUWChQ1UIO2/s6DShQa8Ib5/Sb9Jgpjk9OTj45TG2NhvmEa09wyFGFPcm9AWCaY0vqNFtSj8OW9Ipzq3" data-form-email="true">
                         <div class="form-group">
                             <input type="email" class="form-control input-sm input-inverse my-2" name="email" required="" data-form-field="Email" placeholder="Email" id="email-footer3-27">
                         </div>
