--- a/page8.html
+++ b/page8.html
@@ -80,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/u">bootstrap responsive templates</a></section><section class="section-table cid-qWypyYQYFT" id="table1-1g">
+<section class="engine"><a href="https://mobirise.me/u">bootstrap html templates</a></section><section class="section-table cid-qWypyYQYFT" id="table1-1g">
 
   
   
@@ -251,7 +251,7 @@
                         Thanks for filling out the form!
                     </div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="pSQdDwjWqOB89qMoZTj9xzOfH7k4hdsWct0pHDIIW908DNyFUKgmbcPfhfmUTtma1lg4g0FGzvauz/xJ9/elHMBGxw/ZPn6WrlarPfivN7IT/B/7tTxjeGQ7K3BmMaix" data-form-field="Email">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="p+tJv+VI/KzEccpYQ1Z99oQZ5lF4qYhZLSIADlyBNimUXl845fMbrVBykLSB2+k+oJjt2zxtB+wb3oO5DTMhRb+2xUzoiPGn33cJSmxWlrCmj/Rb9HEJOnN4+W9XiM90" data-form-field="Email">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
@@ -324,7 +324,7 @@
                     </div>
 
                     <form class="form-inline" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form">
-                        <input type="hidden" value="eg+e5Sttqj82DDbqYjeESaVBP7f+2bj34h3yaXRBUfKp6rkXBhEafbtorW+hc1x5lKvHDLGFsaFVRNZyX/lmZxF/BD83Fuzz3lEcymzrTy/IBZioRdsU+/W08ZdgtR7i" data-form-email="true">
+                        <input type="hidden" value="2xMzk9LuCF84yNmPIUppIPXPHKPGD+YT2Gq1cYpDGG6gAsy3ZlZkijpjNaq5RwfzS1zev9Fnvz0CVFM13b4vOvLhcMrPBnFz8pS2YENBUVPe2FDrry9a3+x6KVu7Qdt7" data-form-email="true">
                         <div class="form-group">
                             <input type="email" class="form-control input-sm input-inverse my-2" name="email" required="" data-form-field="Email" placeholder="Email" id="email-footer3-28">
                         </div>
