create github pages

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                         About Us</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page1.html">
                         Services
                     </a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page4.html">
-                        Projects</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page2.html">
+                        Projects</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page4.html">
                         Research</a></li>
                 <li class="nav-item">
                     <a class="nav-link link text-black display-4" href="page3.html">
@@ -80,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/z">best free html templates</a></section><section class="carousel slide cid-qWsB5IvWiN" data-interval="false" id="slider1-4">
+<section class="engine"><a href="https://mobirise.me/v">free html templates</a></section><section class="carousel slide cid-qWsB5IvWiN" data-interval="false" id="slider1-4">
 
     
 
@@ -254,7 +254,7 @@
                     </div>
 
                     <form class="form-inline" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form">
-                        <input type="hidden" value="velnmnyfvsPAys6EGNZxosX0IF+2Eyu/W3Lvts2J6b3jNQCbwsGzbbcRaJaIGQELetVOlRMcy4n6kmd4YLUC6BdpzW7ZgOZBT4F/AZqeHF2by5F0oC+53hKSuXtIrH4L" data-form-email="true">
+                        <input type="hidden" value="GlkVp6ILYIsBIyFo8S8tk5Pq/jzMEhYdY6T/9tjl350jjP4B4WAcF558muBJUtKbgzNqpfyQYcM06s4y1T+zoo+qI1e8+oEJ/ljxHCO8LBRWfhvBXhrj8kRwi66Xfc6j" data-form-email="true">
                         <div class="form-group">
                             <input type="email" class="form-control input-sm input-inverse my-2" name="email" required="" data-form-field="Email" placeholder="Email" id="email-footer3-21">
                         </div>
