--- a/page1.html
+++ b/page1.html
@@ -69,7 +69,7 @@
                         About Us</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page1.html">
                         Services
                     </a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page4.html">
-                        Projects</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page2.html">
+                        Projects</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page4.html">
                         Research</a></li>
                 <li class="nav-item">
                     <a class="nav-link link text-black display-4" href="page3.html">
@@ -80,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/n">free landing page templates</a></section><section class="mbr-section content4 cid-qWsHYHLJWJ" id="content4-h">
+<section class="engine"><a href="https://mobirise.me/c">website builder</a></section><section class="mbr-section content4 cid-qWsHYHLJWJ" id="content4-h">
 
     
 
@@ -382,7 +382,7 @@
                     </div>
 
                     <form class="form-inline" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form">
-                        <input type="hidden" value="67O5G+tjubNIme4XmU4Xfq3/hHaRaIDEqZ6khNfVFM9Y6127xUf2ShiLaggozqxHW7KE4ecBe54EEiYWRq1uxc1BoWOSF/SbIYo4p2yx13Kir/ImVMSX3j5xosr8uqUA" data-form-email="true">
+                        <input type="hidden" value="c9D3Tvmm1Q0gYR5HcF3yyWLdHnizshwOdHDGET8yIxTJRYnsXuQvlUVva0t/zEQXFEfQ1v9Fox1T5nbAnqwd13L2waAaNN55bsBGTpZrxkhihaISIbhxL53SaWAced2u" data-form-email="true">
                         <div class="form-group">
                             <input type="email" class="form-control input-sm input-inverse my-2" name="email" required="" data-form-field="Email" placeholder="Email" id="email-footer3-22">
                         </div>
