--- a/page2.html
+++ b/page2.html
@@ -69,7 +69,7 @@
                         About Us</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page1.html">
                         Services
                     </a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page4.html">
-                        Projects</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page2.html">
+                        Projects</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page4.html">
                         Research</a></li>
                 <li class="nav-item">
                     <a class="nav-link link text-black display-4" href="page3.html">
@@ -80,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/w">free html5 templates</a></section><section class="mbr-section content4 cid-qWsMAPvWsa" id="content4-o">
+<section class="engine"><a href="https://mobirise.me/x">free css templates</a></section><section class="mbr-section content4 cid-qWsMAPvWsa" id="content4-o">
 
     
 
@@ -146,7 +146,7 @@
                     </div>
 
                     <form class="form-inline" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form">
-                        <input type="hidden" value="13hlP3kXoWrSRk1r7dmyfX/ePfjKeZsFeEAkYuaxi66Nl0SrcnSrSftHAPjomoJrRRnus2Yr5JvLckiUNl8gBL0JZ3gQ+VpI2L079tRpubGiWWcV33DLLQHV5DYVRGwH" data-form-email="true">
+                        <input type="hidden" value="Ez7zfUvPvN1kWU5A9OzGF0Ouuq7kkyJTD6Zj9UQMZWAadPHBQyNb3430M4oCA6vf/CObxi7HB+jLY7bqGXPuwI7lzW0wPK4lL+uQdX6+QdJIVvChZ936c3NU8hyEsXl2" data-form-email="true">
                         <div class="form-group">
                             <input type="email" class="form-control input-sm input-inverse my-2" name="email" required="" data-form-field="Email" placeholder="Email" id="email-footer3-24">
                         </div>
