--- a/page3.html
+++ b/page3.html
@@ -68,7 +68,7 @@
                         About Us</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page1.html">
                         Services
                     </a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page4.html">
-                        Projects</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page2.html">
+                        Projects</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page4.html">
                         Research</a></li>
                 <li class="nav-item">
                     <a class="nav-link link text-black display-4" href="page3.html">
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/p">website templates free download</a></section><section class="mbr-section form1 cid-qWsNBZy9jh" id="form1-u">
+<section class="engine"><a href="https://mobirise.me/m">free website design templates</a></section><section class="mbr-section form1 cid-qWsNBZy9jh" id="form1-u">
 
     
 
@@ -98,7 +98,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thanks for filling out the form!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="hYv5rGTtyY3LMdAgT0/dHeuRQ1+3wSnaZEcvQ7QDRqNa/2OylbE+auyxJyR4GPwh/vnhGSCguhpldo6OdVO1YHdc16KsPL0FME3DxMTRU/8cLOckKnhooCBntkJLFu0q" data-form-field="Email">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="om2Kf2FhXfLJsy9R7Om7cy20spWPWqhva3GvlIi7bGlqeEBHayAUIhJlJN35Y1Aos9C6oGaPtLwZszNtGMy2ZiQkcQ8euSTwO8Iys+GCGZ+/i5+MJQp8dZDaeXTNGUow" data-form-field="Email">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
@@ -171,7 +171,7 @@
                     </div>
 
                     <form class="form-inline" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form">
-                        <input type="hidden" value="7NKE+UqECUuMai3Bt82ng+dpmP1ra9fvvR++2vCC7cN0Lbe5aRWsy8oBgHqVB+VWJtb91KwzlpcDNzZPzvfdvtbAaNtxzrS1l6QRhr5IVLr8ZQkzD1pO0jN/JxCs7EM2" data-form-email="true">
+                        <input type="hidden" value="tYe/7cME5dURrr4IleIIBAkotJic2MW6p5MzLKLFnexGum6YBvFzVbtq+9dilJ08txLXFlJudSY5gm3PEHtk2IP6BWKHgbgnlw1zqRE0mtGFZ6rDUQ25+W3b1i4N2wtx" data-form-email="true">
                         <div class="form-group">
                             <input type="email" class="form-control input-sm input-inverse my-2" name="email" required="" data-form-field="Email" placeholder="Email" id="email-footer3-26">
                         </div>
