--- a/page7.html
+++ b/page7.html
@@ -69,7 +69,7 @@
                         About Us</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page1.html">
                         Services
                     </a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page4.html">
-                        Projects</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page2.html">
+                        Projects</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page4.html">
                         Research</a></li>
                 <li class="nav-item">
                     <a class="nav-link link text-black display-4" href="page3.html">
@@ -80,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/w">free html5 templates</a></section><section class="section-table cid-qWykKOWa0P" id="table1-1c">
+<section class="engine"><a href="https://mobirise.me/s">bootstrap themes</a></section><section class="section-table cid-qWykKOWa0P" id="table1-1c">
 
   
   
@@ -239,7 +239,7 @@
                         Thanks for filling out the form!
                     </div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="wcXijAfqjjonyTNcWmZIkU0tV4xo+2SZCcE0n1hJHkaZYVPHR0GPg8n3soRPy6jlGWg2E7zuEbQKcRk8vOLlBSigzVNjs2fUSma62dXanWOvS1X1wJ0V9bj/B4TQIFkX" data-form-field="Email">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="GYUIshTMCDj72zLwqyiXvupEPRc5fIbPL5BA4IvvtZtJRcVCLHC4lfFtU7X1FvIvKf3AjeAwe+tCXVDl8pgGzCJCZjdBS6goc+90uYlBy90e2LxdjlSBFOZ5DwhgppIn" data-form-field="Email">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
@@ -312,7 +312,7 @@
                     </div>
 
                     <form class="form-inline" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form">
-                        <input type="hidden" value="5cTtdPtRBpDVrg4HZ0YiPWcwv6ivg5+6WIJqqnIg0fIlQUQXwUWChQ1UIO2/s6DShQa8Ib5/Sb9Jgpjk9OTj45TG2NhvmEa09wyFGFPcm9AWCaY0vqNFtSj8OW9Ipzq3" data-form-email="true">
+                        <input type="hidden" value="JrxE+JX8Qis7zSUafyazm60CTKH8YaSmXo+fJj+3qZnDswMsD2CND48t2/cJ2l9hnVcVC2rxx+dsR7unzqoTPpZj2MsGab7TbsBFPi2aHylu/rTcLoL113UXdJ80HdT6" data-form-email="true">
                         <div class="form-group">
                             <input type="email" class="form-control input-sm input-inverse my-2" name="email" required="" data-form-field="Email" placeholder="Email" id="email-footer3-27">
                         </div>
