--- a/page8.html
+++ b/page8.html
@@ -69,7 +69,7 @@
                         About Us</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page1.html">
                         Services
                     </a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page4.html">
-                        Projects</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page2.html">
+                        Projects</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page4.html">
                         Research</a></li>
                 <li class="nav-item">
                     <a class="nav-link link text-black display-4" href="page3.html">
@@ -80,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/u">bootstrap html templates</a></section><section class="section-table cid-qWypyYQYFT" id="table1-1g">
+<section class="engine"><a href="https://mobirise.me/t">free amp template</a></section><section class="section-table cid-qWypyYQYFT" id="table1-1g">
 
   
   
@@ -251,7 +251,7 @@
                         Thanks for filling out the form!
                     </div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="p+tJv+VI/KzEccpYQ1Z99oQZ5lF4qYhZLSIADlyBNimUXl845fMbrVBykLSB2+k+oJjt2zxtB+wb3oO5DTMhRb+2xUzoiPGn33cJSmxWlrCmj/Rb9HEJOnN4+W9XiM90" data-form-field="Email">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="0fjEELGLTHXndG71xb3XRFsaV7wP2GPDoiu28iRtIdh9SKkH3T0gOpOLez0j3OwoVwMl6xnyUpXvt47W8CevPkF809WR6FA0ueNT7lUFEAtwRY1SqaGwIEU408+c2/iS" data-form-field="Email">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
@@ -324,7 +324,7 @@
                     </div>
 
                     <form class="form-inline" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form">
-                        <input type="hidden" value="2xMzk9LuCF84yNmPIUppIPXPHKPGD+YT2Gq1cYpDGG6gAsy3ZlZkijpjNaq5RwfzS1zev9Fnvz0CVFM13b4vOvLhcMrPBnFz8pS2YENBUVPe2FDrry9a3+x6KVu7Qdt7" data-form-email="true">
+                        <input type="hidden" value="tOcLzq9wy14KT3OjTMFusI0QJyyAs/rTb7b5iKj4KuCM/R6KmHByN9+zGCpe61ISSQ5bJee0pIQ1iO+7j4uHYJwcBEYUCD29nVh36e92Bdox17YGLbKfc1TczlEg7k3I" data-form-email="true">
                         <div class="form-group">
                             <input type="email" class="form-control input-sm input-inverse my-2" name="email" required="" data-form-field="Email" placeholder="Email" id="email-footer3-28">
                         </div>
